--- a/MyPhotoblog.pl/CSS/header.css
+++ b/MyPhotoblog.pl/CSS/header.css
@@ -68,21 +68,22 @@
     }
 }
 /* ==================================== */
-
 .header {
     width: 100%; height: 100vh;
+    background-repeat: no-repeat;
     overflow: hidden;
     box-shadow: 0px 5px 40px black;
     background-image: url("/GALLERY/headerbackground.jpg");
-    background-size: 110% ;
-    background-position: 50% 80%;
-    background-repeat: no-repeat;
-
+    background-size: 105%;
+    background-position: 0% 80%;
 }
 
-.header-img {
-    width: 100vw; height: 139vh;
-    transform: translateY(-300px);
+.header-blur {
+    width: 100%; height: 100%;
+    position: relative;
+    z-index: -1;
+    filter: blur(2px);
+    background-image: url(/GALLERY/headerbackground.jpg);
 }
 
 .header-title {
@@ -100,24 +101,27 @@
 }
 
 .header-button-icon {
-    width: 70px; height: 70px;
-    border-radius: 50%;
-    background-color: white;
+    width: 150px; height: 50px;
+    background-color: transparent;
     display: block;
     position: absolute;
     bottom: 5%;
     left: calc(50% - 50px);
-    box-shadow: 0px 0px 50px black;
+    font-size: 20px;
+    color: white;
+    text-shadow: 0px 0px 40px black;
     animation: buttonBreathe 6s infinite;
 }
 
 .header-button {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
     transition: 0.4s;
     text-align: center;
-    line-height: 70px;
-    font-size: 25px;
+    line-height: 50px;
+    font-size: 15px;
     color: black;
-    animation: arrowDown 6s infinite;
+
 }
 
 .header-button:hover {
