--- a/MyPhotoblog.pl/CSS/main.css
+++ b/MyPhotoblog.pl/CSS/main.css
@@ -35,17 +35,8 @@ a {
 
 
 /* ==================================== */
-
-.lol {
-    width: 100%; height: 100%;
-    position: fixed;
-    pointer-events: none;
-    opacity: 0;
-    display: block;
-}
-
 ::-webkit-scrollbar {
-    width: 0px;
+    width: 8px;
     background-color: lightgrey;
     animation: scrollShowUp 1s 1s infinite;
 }
@@ -70,20 +61,39 @@ a {
 
 /* ==================================== */
 .content {
-    width: 70%; height: 300px;
-    background-color: rgb(241, 241, 241);
+    width: 60%; height: 300px;
+    background-color: white;
     color: black;
-    margin: 100px auto
+    margin: 150px auto;
+    box-shadow: 3px 3px black, -2px -2px black;
 }
 
 .content-header {
+    background-color: black;
+    text-align: center;
+    width: 500px;
+    transform: translate(-40px, -40px);
+    box-shadow: 5px 5px 10px black;
     font-size: 40px;
+    color: white;
+}
+
+.content-header-right {
+    text-align: center;
+    width: 500px;
+    transform: translate(calc(165%), -40px);
+    box-shadow: 3px 3px black, -2px -2px black;
+    font-size: 40px;
+    background-color: white;
     color: black;
 }
 
 .content-text {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
     width: 90%; height: auto;
     margin: auto;
     display: block;
+    font-size: 18px;
 }
 /* ==================================== */
