--- a/MyPhotoblog.pl/CSS/nav.css
+++ b/MyPhotoblog.pl/CSS/nav.css
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @keyframes navShowDown {
@@ -17,7 +17,7 @@
 }
 
 .navigation-container {
-    width: 70%; height: 60px;
+    width: 80%; height: 60px;
     display:  flex;
     justify-content: space-between;
     align-items: center;
@@ -28,7 +28,7 @@
     position: relative;
     z-index: 100;
     font-family: 'Playfair Display', serif;
-    font-size: 20px;
+    font-size: 1vw;
     font-weight: 100;
     color: white;
     text-shadow: black 5px 5px 10px;
@@ -45,7 +45,7 @@
 }
 
 .logo {
-    font-size: 40px;
+    font-size: 3vw;
     text-align: center;
     padding: 0px 20px;
     font-weight: 900;
